--- a/H1EMU-Launcher/Language/StringResources.tr-TR.xaml
+++ b/H1EMU-Launcher/Language/StringResources.tr-TR.xaml
@@ -4,10 +4,10 @@
 
     <system:String x:Key="item1">Yeni bir güncelleme var, yüklemek ister misiniz?</system:String>
     <system:String x:Key="item2">GÜNCELLEME</system:String>
-    <system:String x:Key="item3">Güncelleme</system:String>
+    <system:String x:Key="item3">Güncelleme Versiyonu</system:String>
     <system:String x:Key="item4">Yerel tekli sunucu için buradan başlatın.</system:String>
     <system:String x:Key="item5">Yerel bir sunucuya bağlanmak için OYNA tuşuna basın.</system:String>
-    <system:String x:Key="item6">H1Emu test sunucusuna bağlanmak için BAĞLAN tuşuna basın. (2015 için)</system:String>
+    <system:String x:Key="item6">H1Emu test sunucusuna bağlanmak için BAĞLAN tuşuna basın.(2015 için)</system:String>
     <system:String x:Key="item7">BAŞLAT</system:String>
     <system:String x:Key="item8">OYNA</system:String>
     <system:String x:Key="item9">BAĞLAN</system:String>
@@ -15,14 +15,14 @@
     <system:String x:Key="item11">İndirmek için Steam hesabınızda H1Z1: Just Survive oyununa sahip olmanız gereklidir. Bu proje korsan oyunları desteklemez.</system:String>
     <system:String x:Key="item12">Topluluğa bağlanın: </system:String>
     <system:String x:Key="item13">Oyun başlatma hatası:</system:String>
-    <system:String x:Key="item14">Oyun bulunamadı ya da H1Emu tarafından desteklenmiyor.</system:String>
+    <system:String x:Key="item14">Oyun belirtilen klasörde bulunamadı.</system:String>
     <system:String x:Key="item15">Oyunun bu sürümü için henüz bir test sunucusu yok. (Aralık 2016)</system:String>
     <system:String x:Key="item16">Seçilen klasör yama dosyalarına sahip değil.\n\nYine de devam etmek stiyor musunuz? (Sunuculara bağlanmanız mümkün olmayacak.)</system:String>
     <system:String x:Key="item17">Steam'e bağlanılamıyor:</system:String>
     <system:String x:Key="item18">EKLE</system:String>
     <system:String x:Key="item19">• Durum •</system:String>
     <system:String x:Key="item21">{0} için depo anahtarı mevcut: {1}</system:String>
-    <system:String x:Key="item22">{0} için CDN erişim anhtarı durumu: {1}</system:String>
+    <system:String x:Key="item22">{0} için CDN erişim anahtarı durumu: {1}</system:String>
     <system:String x:Key="item23">İndirme tamamlandı!</system:String>
     <system:String x:Key="item24">Başka bir versiyon yüklemek ister misiniz? Tekrar girmöek için tuşa alttaki basın!</system:String>
     <system:String x:Key="item25">GİRİŞ</system:String>
@@ -30,13 +30,13 @@
     <system:String x:Key="item27">Versiyon</system:String>
     <system:String x:Key="item28">İPTAL</system:String>
     <system:String x:Key="item29">Hangi versiyonu</system:String>
-    <system:String x:Key="item30">yüklemek istersiniz?</system:String>
+    <system:String x:Key="item30">hangisini yüklemek istersiniz?</system:String>
     <system:String x:Key="item31">OCAK 2015</system:String>
     <system:String x:Key="item32">ARALIK 2016</system:String>
     <system:String x:Key="item33">H1Z1: Just Survive'ın bu versiyonunu indirmeyi iptal etmek ister misiniz?</system:String>
-    <system:String x:Key="item34">Just Survive indirmek gerekli mi?</system:String>
-    <system:String x:Key="item35">Başlamak için sol kısıma Steam kullanıcı bilgilerinizi girin!</system:String>
-    <system:String x:Key="item36">Lütfen KUllanıcı Adı ve Şifre kutularını doldurduğunuza emin olun.</system:String>
+    <system:String x:Key="item34">Just Survive indirmek mi istiyorsunuz?</system:String>
+    <system:String x:Key="item35">Başlamak için sol kısma Steam kullanıcı bilgilerinizi girin!</system:String>
+    <system:String x:Key="item36">Lütfen Kullanıcı Adı ve Şifre kutularını doldurduğunuza emin olun.</system:String>
     <system:String x:Key="item37">H1Z1: Just Survive'ın bu versiyonu başarı ile yüklendi:</system:String>
     <system:String x:Key="item38">H1Z1: Just Survive'ın bu versiyonunun yüklemesi iptal edildi:</system:String>
     <system:String x:Key="item39">İçerikYüklemeHatası:</system:String>
@@ -50,14 +50,14 @@
     <system:String x:Key="item47">Sunucuların son kararlı halini indirmek için buraya tıklayın.</system:String>
     <system:String x:Key="item48">Güncellemeler kontrol ediliyor...</system:String>
     <system:String x:Key="item49">Lütfen bekleyin</system:String>
-    <system:String x:Key="item50">Lütfeb Steam hesabınıza girdikten sonra ikili-güvenlik adımı için -postanızın açık olduğundan emin olun.</system:String>
-    <system:String x:Key="item51">Akitfi bir klasör seçmediniz.\n\nKlasörü Ayarlar menüsünden seçiniz.</system:String>
+    <system:String x:Key="item50">Lütfen Steam hesabınıza girdikten sonra ikili-güvenlik adımı için e-postanızın açık olduğundan emin olun.</system:String>
+    <system:String x:Key="item51">Aktif bir klasör seçmediniz.\n\nKlasörü Ayarlar menüsünden seçiniz.</system:String>
     <system:String x:Key="item52">Sunucu dosyalarını yüklemediniz.\n\nBu işlemi Ayarlar menüsünden yapınız.</system:String>
     <system:String x:Key="item53">Sunucu başlatma hatası:</system:String>
     <system:String x:Key="item54">İndiriliyor...</system:String>
     <system:String x:Key="item55">Uygulama dalı kullanılıyor: {0}</system:String>
     <system:String x:Key="item56">Depo işleniyor {0} - {1}</system:String>
-    <system:String x:Key="item57">Disk aLanı tanımlanıyor...</system:String>
+    <system:String x:Key="item57">Disk alanı tanımlanıyor...</system:String>
     <system:String x:Key="item58">H1Emu bu oyun versiyonunu desteklemiyor.</system:String>
     <system:String x:Key="item59">Steam Adı</system:String>
     <system:String x:Key="item60">Şifre</system:String>
@@ -82,8 +82,8 @@
     <system:String x:Key="item80">Yükleme öncesi ayarlar kaydedildi.</system:String>
     <system:String x:Key="item83">{0} sunucusu  {1} deposu için CDN kodu alınamadı.</system:String>
     <system:String x:Key="item84">{0} uygulaması için depo dosyası bulunamadı.</system:String>
-    <system:String x:Key="item85"> {0} deposu {1} uygulaması için listelenmedi.</system:String>
-    <system:String x:Key="item86">Doysa çıkarımı: {0} ({1})...</system:String>
+    <system:String x:Key="item85">{0} deposu {1} uygulaması için listelenmedi.</system:String>
+    <system:String x:Key="item86">Dosya çıkarımı: {0} ({1})...</system:String>
     <system:String x:Key="item87">Evet</system:String>
     <system:String x:Key="item88">Hayır</system:String>
     <system:String x:Key="item89">Seçilen klasör boş değil.\n\nYine de devam etmek istiyor musunuz?</system:String>
@@ -110,12 +110,10 @@
     <system:String x:Key="item115">Sunucu dosyaları indiriliyor...</system:String>
     <system:String x:Key="item116">Sunucu dosyaları açılıyor...</system:String>
     <system:String x:Key="item117">NodeJS indiriliyor...</system:String>
-    <system:String x:Key="item118">node dosyaları açılıyor...</system:String>
-    <system:String x:Key="item119">• Oyun versiyonu bulunamadı •</system:String>
+    <system:String x:Key="item118">Node dosyaları açılıyor...</system:String>
     <system:String x:Key="item120">Lütfen H1Z1'i kapatın.</system:String>
     <system:String x:Key="item121">H1Z1.exe şu anda kullanımda.\n\nAçık olan H1Z1 uygulamalarını kapatın..</system:String>
-    <system:String x:Key="item122">Mevcut oyun versiyonu: 2015</system:String>
-    <system:String x:Key="item123">Mevcut oyun versiyonu: 2016</system:String>
+    <system:String x:Key="item122">Mevcut oyun versiyonu:</system:String>
     <system:String x:Key="item124">Başlatıcı Versiyonu v</system:String>
     <system:String x:Key="item125">Copyright © 2021 | H1Emu Project</system:String>
     <system:String x:Key="item126">Ana Geliştirici</system:String>
@@ -129,7 +127,7 @@
     <system:String x:Key="item134">HAYIR</system:String>
     <system:String x:Key="item135">H1Z1: Just Survive</system:String>
     <system:String x:Key="item136">Çeviri Ekibi</system:String>
-    <system:String x:Key="item137">\n\n(Internet'e bağlı mısınız??)</system:String>
+    <system:String x:Key="item137">\n\n(Internet'e bağlı mısınız?)</system:String>
     <system:String x:Key="item138">\n\n(Dosyalar silinmeyecek)</system:String>
     <system:String x:Key="item139">H1Emu Sunucusu</system:String>
     <system:String x:Key="item140">Tek Oyuncu</system:String>
@@ -148,5 +146,5 @@
     <system:String x:Key="item153">H1Emu sunucularına bağlanırken bir erişim kodu ayarlamalısınız. Bu işlem Ayarlar menüsünden yapılabilir.</system:String>
     <system:String x:Key="item154">Erişim Kodu...</system:String>
     <system:String x:Key="item155">Erişim Kodu</system:String>
-    <system:String x:Key="item156">H1Emu sunucularında oynamak için bir erişim kodu ayarlamalısınız. Bu kodu Profilinizde şu kısımda bulabilirsiniz:</system:String>
+    <system:String x:Key="item156">H1Emu sunucularında oynamak için bir erişim kodu ayarlamalısınız.Bu kodu Profilinizde şu kısımda bulabilirsiniz:</system:String>
 </ResourceDictionary>
