--- a/H1EMU-Launcher/Language/StringResources.xaml
+++ b/H1EMU-Launcher/Language/StringResources.xaml
@@ -15,7 +15,7 @@
     <system:String x:Key="item11">You must own H1Z1: Just Survive on your Steam account in order to download. This project does not support piracy.</system:String>
     <system:String x:Key="item12">Join the Community at</system:String>
     <system:String x:Key="item13">Error launching game:</system:String>
-    <system:String x:Key="item14">Game either not found or not supported by H1Emu.</system:String>
+    <system:String x:Key="item14">Game not found in specified directory.</system:String>
     <system:String x:Key="item15">There is no test server for this version of the game currently. (December 2016)</system:String>
     <system:String x:Key="item16">The selected directory does not contain patch files.\n\nWould you like to continue anyway? (You won't be able to load into servers)</system:String>
     <system:String x:Key="item17">Unable to login to Steam:</system:String>
@@ -72,7 +72,7 @@
     <system:String x:Key="item69">• Game Version Not Detected •</system:String>
     <system:String x:Key="item70">Detecting game version...</system:String>
     <system:String x:Key="item71">Game version detected: 15th January 2015</system:String>
-    <system:String x:Key="item72">• Game version not supported •</system:String>
+    <system:String x:Key="item72">• Game Version Not Supported •</system:String>
     <system:String x:Key="item73">Please wait for the current tasks to complete.</system:String>
     <system:String x:Key="item74">Game version detected: 22nd December 2016</system:String>
     <system:String x:Key="item75">Directory</system:String>
@@ -111,11 +111,9 @@
     <system:String x:Key="item116">Unzipping server files...</system:String>
     <system:String x:Key="item117">Downloading NodeJS standalone...</system:String>
     <system:String x:Key="item118">Unzipping node files...</system:String>
-    <system:String x:Key="item119">• Game version not detected •</system:String>
     <system:String x:Key="item120">Please close H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nClose any open instances of H1Z1.</system:String>
-    <system:String x:Key="item122">Current Game Version: 2015</system:String>
-    <system:String x:Key="item123">Current Game Version: 2016</system:String>
+    <system:String x:Key="item122">Current Game Version:</system:String>
     <system:String x:Key="item124">Launcher version v</system:String>
     <system:String x:Key="item125">Copyright © 2021 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
