--- a/H1EMU-Launcher/SteamFrame/Login.xaml
+++ b/H1EMU-Launcher/SteamFrame/Login.xaml
@@ -6,7 +6,7 @@
       xmlns:gif="http://wpfanimatedgif.codeplex.com"
       xmlns:local="clr-namespace:H1EMU_Launcher"
       mc:Ignorable="d" 
-      d:DesignHeight="100"
+      d:DesignHeight="140"
       d:DesignWidth="565"
       FontFamily="Bahnschrift Light"
       UseLayoutRounding="True"
@@ -15,7 +15,7 @@
     <!-- Main Grid -->
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
