--- a/H1EMU-Launcher/SteamFrame/DownloadComplete.xaml
+++ b/H1EMU-Launcher/SteamFrame/DownloadComplete.xaml
@@ -5,14 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:H1EMU_Launcher"
       mc:Ignorable="d" 
-      d:DesignHeight="100"
+      d:DesignHeight="140"
       d:DesignWidth="565"
       FontFamily="Bahnschrift Light"
       Title="DoenloadComplete">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="44"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
